--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -1,125 +1,2 @@
 ﻿l_japanese:
- GER_1936_party_conference:0 "共産党の勝利"
- GER_left:0 "テールマン派"
- GER_right:0 "ブランドラー派"
- GER_union_USPD:0 "野党左派との合流"
- GER_suppress_opposition:0 "反対派を抑圧"
- GER_united_front_tatics:0 "統一戦線戦術"
- GER_New_socialism:0 "新しい社会主義"
- GER_socialist_economy:0 "経済政策の見直し"
- socialist_economy2:0 "市場経済を取り入れる"
- GER_condemn_revisionists:0 "修正主義者を批判"
- GER_workers_government:0 "労働者政府"
- GER_new_socialism_economy:0 "新しい社会主義経済"
- GER_social_fascism:0 "社会ファシズム論"
- GER_unite_SPD:0 "社共合同"
- GER_totalitarianism:0 "全体主義論"
- GER_positive_propaganda:0 "積極的なプロパガンダ"
- GER_approaching_international:0 "インターナショナルへの接近"
- GER_organize_secret_police_force:0 "秘密警察を組織"
- GER_purge_dissidents:0 "反体制派を粛清"
- GER_distance_from_international:0 "距離を取る"
- GER_international_revolution:0 "プロレタリア国際主義"
- GER_protecting_czech_communists:0 "チェコの共産主義者を保護"
- GER_supporting_poland:0 "ポーランドの独立を支援"
- GER_warsaw_uprising:0 "ワルシャワ蜂起"
- GER_Criticizes_Italian_totalitarianism:0 "イタリアへの攻撃"
- GER_supporting_great_britain:0 "イギリスの革命勢力を支援"
- GER_war_against_the_fascists:0 "ファシストとの戦争"
- GER_declaration_of_war_on_america:0 "海を越えて"
- GER_war_plan_against_russia:0 "ロシアに対する戦争計画"
- GER_gateway_to_the_mediterranean:0 "地中海への玄関口"
- GER_proletariat_dictatorship:0 "前衛党による指導"
- GER_facilitate_nationalization:0 "国有化の促進"
- GER_workers_democracy:0 "労働者の民主主義"
- GER_leadership_reform:0 "指導部の改革"
- GER_preparing_for_battle:0 "戦いへの備え"
- GER_swiss_partition:0 "スイス分割"
- GER_assist_small_medium_enterprises:0 "中小企業への援助"
- GER_agricultural_collectivization:0 "農業集団化"
- GER_rail_network_expansion:0 "鉄道網の拡大"
- GER_focus_on_industry:0 "産業への注力"
- GER_first_five_year_plan:0 "第一次五ヵ年計画"
- GER_second_five_year_plan:0 "第二次五ヵ年計画"
- GER_one_country_socialism:0 "一国社会主義"
- GER_reclaiming_schleswig:0 "シュレースヴィヒ奪還"
- GER_thought_education:0 "思想教育の徹底"
- GER_socialist_realism:0 "社会主義リアリズム"
- GER_state_atheism:0 "国家無神論"
- GER_support_finland:0 "フィンランドの独立を支援"
- GER_friendship_with_denmark:0 "デンマークとの友好"
- GER_reconquest_african_colonies:0 "退路を断つ"
- GER_war_economy:0 "戦争経済"
- GER_road_construction:0 "道路を建設"
- GER_attack_switherland:0 "南からの迂回"
- GER_south_tyrol:0 "南チロル再請求"
- GER_state_function:0 "国家事業の拡大"
- GER_more_industry:0 "更なる工業化"
- GER_legacy_of_an_empire:0 "帝国の遺産"
- GER_red_volunteer_army:0 "赤色義勇軍"
- GER_support_for_the_spanish_civilwar:0 "スペイン内戦への介入"
- GER_inciting_revolution_in_hungary:0 "ハンガリー革命を扇動"
- GER_ask_for_reward:0 "見返りを求める"
- GER_selfgovernment_movement:0 "フィンランド自治運動"
- GER_workers_take_up_arms:0 "労働者よ、武器を取れ"
- GER_war_mobilization_law:0 "戦時動員法"
- army_1:0 "陸軍の再編"
- navy_1:0 "海軍の再編"
- airforce_1:0 "空軍の再編"
- army_8:0 "ドイツ地上軍"
- airforce_8:0 "ドイツ航空軍"
- navy_8:0 "ドイツ海軍"
- navy_7:0 "潜水艦への注力"
- industry_2:0 "鉄道網の拡大"
- industry_3:0 "軍需工場への投資"
- industry_4:0 "民需工場への投資"
- industry_5:0 "ベルリン工科大学"
- industry_7:0 "軍需工場への投資 II"
- industry_8:0 "民需工場への投資 II"
- industry_9:0 "研究機関への投資"
- industry_11:0 "V-1ロケット"
- navy_2:0 "造船所の拡大"
- navy_4:0 "造船所の拡大 II"
- navy_6:0 "海軍ドクトリンの研究"
- navy_5:0 "主力艦への注力"
- navy_3:0 "小型艦への注力"
- army_2:0 "歩兵装備の開発"
- army_4:0 "戦場の女神"
- army6:0 "装備の更新"
- army_3:0 "自動車化への注力"
- army5:0 "機械化への注力"
- army_7:0 "戦車への注力"
- airforce_2:0 "航空基地の拡大"
- airforce_3:0 "小型機への注力"
- airforce_5:0 "中型機への注力"
- airforce_4:0 "対空砲への注力"
- airforce_7:0 "大型機への注力"
- airforce_6:0 "対空砲への注力 II"
- GER_council_election:0 "1936年評議会選挙"
- GER_SPD:0 "社会民主党の勝利"
- GER_NSAP:0 "国民社会主義者の勝利"
- industry_6:0 "インフラへの投資"
- industry_10:0 "インフラへの投資 II"
- GER_national_assembly:0 "国民議会への権限委譲"
- GER_weimer_republic:0 "ヴァイマル憲法"
- GER_FGE:0 "亡命政府の公認"
- GER_ENG:0 "イギリスとの友好"
- GER_Allies:0 "連合国への加盟"
- GER_break_off_a_bridgehead:0 "橋頭堡を断つ"
- GER_SRI:0 "イタリアからの産業顧問"
- GER_balkan:0 "東欧への介入"
- GER_Nordic:0 "北欧への介入"
- GER_DEN:0 "デンマークとの友好"
- GER_UKR:0 "ウクライナの同志"
- GER_balt:0 "バルトの同志"
- GER_Eastern_Europe:0 "西欧への介入"
- GER_Western_Europe:0 "東欧への介入"
- newfocus_104:0 "スカンディナヴィアの統制"
- GER_Straits_of_Dover:0 "海峡への一手"
- GER_heavy_industry:0 "重工業への投資"
- GER_industrial_advisor_from_france:0 "フランスからの産業顧問"
- GER_out_of_country_experts:0 "国外の専門家"
- GER_siegfried_fortress_line:0 "ジークフリート要塞線"
- GER_compromise_with_revisionists:0 "修正主義者との妥協"
- GER_attack_france:0 "フランスへの攻撃"
- 
+ GER_1936_election:0 "1936年評議会選挙"
