--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -27,7 +27,8 @@
  pay_government_bond: "国債償還"
  war_expenses: "軍事費"
  war_expenses_percentage: "[?ROOT.EV_war_expenses_var|%.0Y]"
- war_expenses_ammount: "§YG§![?EV_war_expenses_amount_var|Y.3]§YM§!"
+#  war_expenses_ammount: "§YG§![?EV_war_expenses_amount_var|Y.3]§YM§!"
+ war_expenses_ammount: "§YG§![?num_ships|Y.3]§YM§!"
  building_expenses: "建設費"
  BUDGET_LOG1: "USA:[?USA.EV_taxes_amount_var_k]M"
  BUDGET_LOG2: "RUS:[?RUS.EV_taxes_amount_var_k]M"
