--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -27,10 +27,24 @@
  civil_servant_saraly_percentage: "[?ROOT.EV_civil_servant_saraly_var|%.0Y]"
  pay_government_bond: "国債償還"
  war_expenses: "軍事費"
+#  war_expenses_percentage: "[?ROOT.EV_war_expenses_var|%.0Y]\n[?ROOT.EV_war_expenses_var_raw|%.0Y]"
  war_expenses_percentage: "[?ROOT.EV_war_expenses_var|%.0Y]"
-#  war_expenses_ammount: "§YG§![?EV_war_expenses_amount_var|Y.3]§YM§!"
- war_expenses_ammount: "§YG§![?num_ships|Y.3]§YM§!"
+ war_expenses_ammount: "§YG§![?EV_war_expenses_amount_var|Y.3]§YM§!"
+#  war_expenses_ammount: "§YG§![?num_ships|Y.3]§YM§!"
  building_expenses: "建設費"
+ GDP_amount_text: "現在のGDP"
+ GDP_amount: "§GG [?GDP_amount_var|.3G]M§!"
+ gdp_0_pct: "[?gdp_50_pct]"
+ gdp_10_pct: "[?gdp_50_pct]"
+ gdp_20_pct: "[?gdp_50_pct]"
+ gdp_30_pct: "[?gdp_50_pct]"
+ gdp_40_pct: "[?gdp_50_pct]"
+ gdp_50_pct: "[?gdp_50_pct]"
+ gdp_60_pct: "[?gdp_50_pct]"
+ gdp_70_pct: "[?gdp_50_pct]"
+ gdp_80_pct: "[?gdp_50_pct]"
+ gdp_90_pct: "[?gdp_50_pct]"
+ gdp_100_pct: "[?gdp_50_pct]"
  BUDGET_LOG1: "USA:[?USA.EV_taxes_amount_var_k]M"
  BUDGET_LOG2: "RUS:[?RUS.EV_taxes_amount_var_k]M"
  BUDGET_LOG3: "GER:[?GER.EV_taxes_amount_var_k]M"
