バルカン戦争修正への足踏み及びGDPグラフ改善

--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -34,17 +34,17 @@
  building_expenses: "建設費"
  GDP_amount_text: "現在のGDP"
  GDP_amount: "§GG [?GDP_amount_var|.3G]M§!"
- gdp_0_pct: "[?gdp_50_pct]"
- gdp_10_pct: "[?gdp_50_pct]"
- gdp_20_pct: "[?gdp_50_pct]"
- gdp_30_pct: "[?gdp_50_pct]"
- gdp_40_pct: "[?gdp_50_pct]"
- gdp_50_pct: "[?gdp_50_pct]"
- gdp_60_pct: "[?gdp_50_pct]"
- gdp_70_pct: "[?gdp_50_pct]"
- gdp_80_pct: "[?gdp_50_pct]"
- gdp_90_pct: "[?gdp_50_pct]"
- gdp_100_pct: "[?gdp_50_pct]"
+ gdp_0_pct: "0%"
+ gdp_10_pct: "20%"
+ gdp_20_pct: "40%"
+ gdp_30_pct: "60%"
+ gdp_40_pct: "80%"
+ gdp_50_pct: "100%"
+ gdp_60_pct: "120%"
+ gdp_70_pct: "140%"
+ gdp_80_pct: "160%"
+ gdp_90_pct: "180%"
+ gdp_100_pct: "200%"
  BUDGET_LOG1: "USA:[?USA.EV_taxes_amount_var_k]M"
  BUDGET_LOG2: "RUS:[?RUS.EV_taxes_amount_var_k]M"
  BUDGET_LOG3: "GER:[?GER.EV_taxes_amount_var_k]M"
