ハンガリー細分化

--- a/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_autonomous_states_l_japanese.yml
@@ -44,3 +44,4 @@
  FGE_autonomy_imperial_dominion: "帝国自治領フランス"
  MAN_autonomy_imperial_dominion: "帝国自治領満州"
  government_general: "総督府"
+ autonomy_cleansing_area: "浄化区域"
