--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -41,7 +41,7 @@
  STATE_40:0 "バルナウル"
  STATE_41:0 "マドリード"
  STATE_42:0 "モーゼルラント"
- STATE_43:0 "ハンガリー北部"
+ STATE_43:0 "ハンガリー中央部"
  STATE_44:0 "アルバニア"
  STATE_45:0 "ヴォイヴォディナ"
  STATE_46:0 "ムンテニア"
@@ -152,8 +152,8 @@
  STATE_151:0 "東スイスアルプス"
  STATE_152:0 "オーバーエスターライヒ"
  STATE_153:0 "チロル"
- STATE_154:0 "アルフェルド"
- STATE_155:0 "ドナウ川西岸"
+ STATE_154:0 "北アルフェルド"
+ STATE_155:0 "南トランスダヌビア"
  STATE_156:0 "カラブリア"
  STATE_157:0 "アブルッツォ"
  STATE_158:0 "ピエモンテ"
@@ -1067,3 +1067,9 @@
  STATE_1065:0 "ケルンテン"
  STATE_1066:0 "ブルゲンラント"
  STATE_1067:0 "ツナイム"
+ STATE_1071:0 "スロバキア南東部"
+ STATE_1072:0 "ハンガリー北部"
+ STATE_1073:0 "西トランスダヌビア"
+ STATE_1074:0 "トランスダヌビア"
+ STATE_1075:0 "バックス・キスクン"
+ STATE_1076:0 "南アルフェルド"
