--- a/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
@@ -41,5 +41,7 @@
  consumer_goods_factor_whitespace_tt: " $consumer_goods_factor_tt$"
  RUS_TW_tt.1:"§R反動的勢力が過激化する！§!"
  RUS_TWC_tt.1:"§R共産主義勢力が過激化する！§!"
+ RUS_BL_tt.per:"§Yペルシャ前線§!の創設によって内政のための資金が減少している！"
+ RUS_BL_tt.ger:"§Yドイツ前線§!の創設によって内政のための資金が減少している！"
 
  RUS_idea_volks_army.tt:"§R民族師団によって軍は政治的な制約を受ける！§!\n危機の時には敵対的§R民族闘争§!が起こる可能性がある\n\n軍制改革によって対立を解消しなければ、§Yカフカース§!、§Yトルキスタン§!で§R反乱§!が起こる！"
