--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -183,3 +183,15 @@
  TR_Russia_diplo.14.d: "テスト:防共協定参加国が赤共に攻撃されました。選択を選んでください。"
  TR_Russia_diplo.14.a: "テスト:履行します"
  TR_Russia_diplo.14.b: "テスト:記憶にございません"
+
+ TR_Russia_TW.1.t:"新皇帝の即位"
+ TR_Russia_TW.1.d:"空位の混乱の中新たな全ロシアの君主となったのはキリル・ウラジミロヴィチだ。その法的地位は権威あるロシアの伝統によって保障されているが、彼の改革的思想は国内の複数の利権者たちに差し迫った危険を感じさせている。\n守旧派たちは自らの軍に対する命令に反抗的になり、空位の混乱に乗じて練っていた複数の計画をそのまま続行するつもりらしい。"
+ TR_Russia_TW.1.a:"アカの次は反動派か"
+
+ TR_Russia_TW.2.t:"ノヴゴロド動乱"
+ TR_Russia_TW.2.d:"陸軍から驚くべき報告が舞い込んできた。守旧派の中でも過激なアントン・デニーキン元帥が駐在中のノヴゴロドで兵士を煽動し、ペトログラードの国家権力を拒否するための行動を起こそうとしている。小規模な警察隊が鎮圧に向かうとのことであるが、武装の質はデニーキンの軍が勝っていることは想像に難くない。"
+ TR_Russia_TW.2.a:"元帥の我儘に真剣になる必要はない"
+ TR_Russia_TW.2.b:"小規模な警察部隊を送れ" 
+ TR_Russia_TW.2.c:"親衛隊を呼べ"
+ oppose_government:"政府への反抗"
+ oppose_government_desc:"この指揮官は政府へ強い反感を抱いており、軍の命令をいくらか無視した行動を行うだろう。"
