--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -195,3 +195,7 @@
  TR_Russia_TW.2.c:"親衛隊を呼べ"
  oppose_government:"政府への反抗"
  oppose_government_desc:"この指揮官は政府へ強い反感を抱いており、軍の命令をいくらか無視した行動を行うだろう。"
+
+ TR_Russia_TW.201.t:"ノヴゴロド動乱が周辺へ拡大"
+ TR_Russia_TW.201.d:"ノヴゴロドで発生した動乱につられて、その周囲におけるデニーキンの信奉者たちは過激な行動を始めている。現在の活動水準では明確な行動を行うには不十分だが、必ずこれを鎮圧する必要がある。"
+ TR_Russia_TW.201.a:"戯れじゃ済まなくなったな"
