--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -234,4 +234,5 @@
  RUS_confiscation_unusable_factory_in_resource_state:"資源地帯での産業再編"
  RUS_confiscation_unusable_factory_in_resource_state_desc:"我が国の資源地帯で行われている農家に資源採掘を強要する。彼らは宝箱の上に住んでいるのに、どうしてその宝を獲得しようとしないのだ？"
 
-
+ RUS_imminent_dangerous:"差し迫った危機への対処"
+ RUS_imminent_dangerous_desc:"この頃、改革に反抗する守旧派将校や騎兵将校たちの命令拒否が顕著になってきた。軍の規律が崩壊する前に、これらの将校の権力を排除し、健全化せねばならない。"
