--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -19,7 +19,7 @@
  taxes_amount_gotten_n: "§R$$§![?EV_taxes_amount_var_k|Y]K"
  currency_issue: "通貨発行"
  government_bond: "国債"
- government_bond_ammount: "発行額: G000.000M"
+ government_bond_amount: "発行額: G000.000M"
  diplomatic_income: "外交協定"
  import_tax: "関税"
  BUDGET_EXPENSES: "歳出"
@@ -27,6 +27,8 @@
  social_security_percentage: "[?ROOT.EV_social_security_var|%.0Y]"
  social_security_tt: "[GetSocialSecurityEffect]"
  social_security_tt_gotten: "§Y現在の社会保障費による影響§!\n$MODIFIER_STABILITY_FACTOR$: [?mtth:social_security_ratio_effect_1|Y.2%]\n$MODIFIER_WAR_SUPPORT_FACTOR$: [?mtth:social_security_ratio_effect_1|Y.2%]"
+ TR_social_security_ratio_effect: "社会保障による影響"
+ social_security_ammount: "§Y+G§![?EV_social_security_amount_var|Y.3]§YM§!"
  civil_servant_saraly: "公務員給与"
  civil_servant_saraly_percentage: "[?ROOT.EV_civil_servant_saraly_var|%.0Y]"
  pay_government_bond: "国債償還"
