--- a/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_economicview_l_japanese.yml
@@ -26,7 +26,7 @@
  social_security: "社会保障費"
  social_security_percentage: "[?ROOT.EV_social_security_var|%.0Y]"
  social_security_tt: "[GetSocialSecurityEffect]"
- social_security_tt_gotten: "§Y現在の社会保障費による影響§!\n$MODIFIER_STABILITY_FACTOR$: [?mtth:social_security_ratio_effect_1|Y.2%]\n$MODIFIER_WAR_SUPPORT_FACTOR$: [?mtth:social_security_ratio_effect_1|Y.2%]"
+ social_security_tt_gotten: "§Y現在の社会保障費による影響§!\n$MODIFIER_STABILITY_FACTOR$: [?mtth:social_security_ratio_effect_1|Y.2%]\n$MODIFIER_WAR_SUPPORT_FACTOR$: [?mtth:social_security_ratio_effect_1|Y.2%]\n$MODIFIER_GLOBAL_MONTHLY_POPULATION$: [?mtth:social_security_ratio_effect_2|Y.2%]"
  TR_social_security_ratio_effect: "社会保障による影響"
  social_security_ammount: "§Y+G§![?EV_social_security_amount_var|Y.3]§YM§!"
  civil_servant_saraly: "公務員給与"
