--- a/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_GER_focus_l_japanese.yml
@@ -1,2 +1,21 @@
 ﻿l_japanese:
  GER_1936_election:0 "1936年評議会選挙"
+ GER_KPD:0 "KPDの勝利"
+ GER_focus_Heinrich_Brandler:0 "ブランドラー派"
+ GER_focus_Ernst_Thalmann:0 "テールマン派"
+ GER_united_front_movement:0 "統一戦線運動"
+ GER_eliminate_political_opponents:0 "政敵を排除"
+ GER_establishment_of_a_mutual_surveillance_network:0 "相互監視網の構築"
+ GER_revision_of_the_planned_economy:0 "計画経済の見直し"
+ GER_ban_SPD:0 "社民党の非合法化"
+ GER_party_and_peoples_Leader:0 "党と人民の指導者"
+ GER_trade_union_collaborators:0 "労働組合の協力者"
+ GER_seek_reconciliation:0 "和解を求める"
+ GER_death_to_the_fascists:0 "ファシストに死を！"
+ GER_workers_government:0 "労働者政府万歳"
+ GER_theleman_constitution:0 "テールマン憲法"
+ GER_improvement_of_peoples_lives:0 "国民生活の改善"
+ GER_price_stabilization:0 "価格の安定化"
+ GER_New_economy_system:0 "新経済システム"
+ GER_the_way_we_go:0 "我々が目指す道"
+ GER_fighting_democracy:0 "戦う民主主義"
