--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -99,8 +99,8 @@
  GER_anarchism_party_long: "ドイツ自由労働者組合"
  GER_syndicalism_party: "DGB"
  GER_syndicalism_party_long: "ドイツ労働組合連盟"
- GER_fascism_party: "NSAP"
- GER_fascism_party_long: "国民社会主義労働者党"
+ GER_fascism_party: "DSP"
+ GER_fascism_party_long: "ドイツ社会党"
  GER_communism_party: "KPD"
  GER_communism_party_long: "ドイツ共産党"
  GER_communism_left_unite_party: "VKPD"
