イデオロギーの修正

--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -4,30 +4,40 @@
  conservatism_acceptance: "保守主義との外交の寛容"
  anarchism: "無政府主義"
  anarchism_noun: "無政府主義"
+ anarchism_ideology: "無政府主義"
  anarchism_desc: "無政府国家"
-#  anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
+ anarchism_ideology_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
  syndicalism: "労働組合主義"
  syndicalism_noun: "労働組合主義"
  syndicalism_desc: "労働組合主義政権"
+ syndicalism_ideology: "労働組合主義"
+ syndicalism_ideology_desc: ""
  communism: "共産主義"
  communism_noun: "共産主義"
+ communism_desc: "社会主義政権"
  socialism: "社会主義"
  socialism_noun: "社会主義"
+ socialism_desk: "社会主義政権"
+ socialism_ideology: "社会主義"
+ socialism_ideology_desc: "改良主義的手段によって平等及び社会主義国家を追求すべく、民主社会主義は国民の信任にもとづいて資本主義の影響を軽減ないし無効化することを目指す。"
  socialdemocratic: "社会民主主義"
  socialdemocratic_noun: "社会民主主義"
+ socialdemocratic_desk: "民主主義政権"
+ socialdemocratic_ideology: "社会民主主義"
+ socialdemocratic_ideology_desc: ""
  democratic: "自由主義"
  democratic_noun: "自由主義"
+ democratic_desc: "民主主義政権"
  fascism: "結束主義"
  fascism_noun: "結束主義"
  fascism_desc: "結束主義政権"
- communism_desc: "社会主義政権"
- democratic_desc: "民主主義政権"
  conservatism: "保守主義"
  conservatism_noun: "保守主義"
- conservatism_desc: "保守主義政権"
+ conservatism_desc: "民主主義政権"
+ conservatism_ideology: "保守主義"
+ conservatism_ideology_desc: ""
  liberalism: "自由主義" 
  liberalism_desc: "個人の自由に価値を置く哲学的な長い伝統から、自由主義は諸権利の保護を国家第一の役割と考える。"
- socialism_desc: "改良主義的手段によって平等及び社会主義国家を追求すべく、民主社会主義は国民の信任にもとづいて資本主義の影響を軽減ないし無効化することを目指す。"
  marxism: "マルクス主義"
  marxism_desc: "経済学ならびに歴史学に関する幅広い領域を包摂するマルクス主義にもとづき、マルクス主義政治はマルクスの諸理論を政治的現実にも適用しようとする。このイデオロギーは階級闘争と生産手段の公有化に基づいた社会の移行の必要性により特徴づけられる。"
  leninism: "レーニン主義"
