イデオロギーアイコン

--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -63,6 +63,10 @@
  neutrality: "中道主義"
  neutrality_noun: "中道主義"
  neutrality_desc: "権威主義政権"
+ despotic_monarchism: "専制君主制"
+ despotic_monarchism_desc: "専制君主制は絶対的な権力を握る一人の君主によって統治される政体である。" 
+ constitutional_monarchism: "立憲君主制"
+ constitutional_monarchism_desc: "立憲君主制は憲法により君主権が制限された君主のもと議会によって統治される政体である。"
  despotism: "専制政治"
  despotism_desc: "専制政治は絶対的な権力を握る一人の人物によって統治される政体である。"
  oligarchism: "寡頭政治"
