デカくてコリアンで皇帝のいる国

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -32,6 +32,8 @@
  JAP_Himiko: "卑弥呼"
  JAP_Showa_Emperor: "昭和天皇"
  JAP_Toyotomi: "豊臣家"
+#  KOR_Yi_Kang: "李堈"
+ KOR_Yi_Kang: "李岡"
  OTT_Caliph_Abdulmecid_II: "アブデュルメジト2世"
  FRA_ludovic_oscar_frossard: "ルドヴィック＝オスカー・フロッサール"
 
