--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -24,6 +24,24 @@
  RUS_refinery_boost:"一ヵ年石油開発計画"
 
 
+
+
+
+
+
+ RUS_purged_army_TW:"抑圧された軍隊"
+
+
+
+
+
+
+
+
+
+
+
+
  RUS_dropped_army:"大義なき侵略"
  RUS_money_by_PER:"イランからの賠償"
  RUS_money_to_RUS:"ロシアへの賠償"
@@ -73,6 +91,8 @@
  RUS_cc: "ロシア空母艦隊"
  Joseph_Stalin: "ヨシフ・ジュガシヴィリ"
 
+
+ 
 
 
 
