--- a/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
@@ -44,5 +44,18 @@
  RUS_BL_tt.per:"§Yペルシャ前線§!の創設によって内政のための資金が減少している！"
  RUS_BL_tt.ger:"§Yドイツ前線§!の創設によって内政のための資金が減少している！"
  RUS_TW_tsarinf.1:"国家方針§Y宮廷親衛隊の創設§!を完了すれば、さらに断固たる対応を行うことができる。"
+ RUS_TW_tsarinf.2:"§G守旧派の反乱に対して親衛隊を動員することができるようになる！§!"
+ RUS_TW_purge.1:"§G反乱に加担するであろう将校へ様々な手段で妨害する！§!"
+ RUS_TW_tsarinf_warinf:"反動派の蜂起の時によく訓練された§Y親衛隊3師団§!が出現する"
+ RUS_TW_army_warinf:"反動派の蜂起の時に少し訓練された§Y復員兵11師団§!が出現する"
+ RUS_TW_inf_danger:"§Rいずれかの反動派対策の国家方針を取得しなければ、陸軍の忠誠は皆無となる！§!"
+ RUS_TW_fin_danger:"§Rいずれかのフィンランドに関する国家方針を取得しなければ、フィンランドの反抗は破滅的なものとなる！§!"
+ RUS_TW_fin_state:"§Y[722.GetName]§!、§Y[213.GetName]§!、§Y[215.GetName]§!、§Y[216.GetName]§!の将来的なフィンランドへの移行と引き換えに彼らの忠誠を得る。"
+ RUS_TW_fin_nothing:"彼らをなにも保障しないことで、§Y少数の兵士は反乱に加担するだろう！§!"
+ RUS_TW_fin_war:"§R彼らの自治権を大幅に制限し、彼らを反乱に味方させる！§!"
+ RUS_TW_fin_war_core:"§Yフィンランド§!の土地を併合すれば、長期的に同化することができる。"
+ RUS_TW_volk_danger:"§Rいずれかの軍制改革に関する国家方針を取得しなければ、§Yコーカサス§Rと§Yトルキスタン§Rで反乱が発生する！§!"
 
- RUS_idea_volks_army.tt:"§R民族師団によって軍は政治的な制約を受ける！§!\n危機の時には敵対的§R民族闘争§!が起こる可能性がある\n\n軍制改革によって対立を解消しなければ、§Yカフカース§!、§Yトルキスタン§!で§R反乱§!が起こる！"
+ RUS_TW_unprison:"§G不当に拘束されていた政治犯たちを側近に登用する§!"
+
+ RUS_idea_volks_army.tt:"§R民族師団によって軍は政治的な制約を受ける！§!\n危機の時には敵対的§R民族闘争§!が起こる可能性がある\n\n国家方針によって対立を解消しなければ、§Yカフカース§!、§Yトルキスタン§!で§R反乱§!が起こる！"
