--- a/localisation/TR_modifiers/japanese/TR_opinion_modifiers_l_japanese.yml
+++ b/localisation/TR_modifiers/japanese/TR_opinion_modifiers_l_japanese.yml
@@ -1,3 +1,5 @@
 ﻿l_japanese:
  FRA_international: "インターナショナルの相互支援"
  SRI_international: "インターナショナルへの接近"
+ RUS_accepted_finland_expantion: "将来的な拡張を確約"
+ RUS_broke_our_independence: "独立を破壊した"
