いぇけもんごるうるす

--- a/localisation/TR_decisions/japanese/GER_decision_l_japanese.yml
+++ b/localisation/TR_decisions/japanese/GER_decision_l_japanese.yml
@@ -1,5 +1,5 @@
 ﻿l_japanese:
- blank_seat: "空席"
+ blank_seat: "無所属"
  GER_01_num: "§Y[?GER_anarchist_seats] 議席§!"
  GER_02_num: "§Y[?GER_syndicalist_seats] 議席§!"
  GER_03_num: "§Y[?GER_communist_seats] 議席§!"
