リワーク第一弾

--- a/localisation/TR_common/japanese/TR_UI_l_japanese.yml
+++ b/localisation/TR_common/japanese/TR_UI_l_japanese.yml
@@ -10,3 +10,9 @@
  TR_research_system_elect: "電子工学への注力"
  TR_research_system_industry: "産業への注力"
  TR_research_deatil: "研究リソースへの注力は最大3分野で可能である。また、研究リソースを集中させることは他の選ばれなかった研究分野の科学者達は不満を持つだろう。"
+ TR_JAP_army_value: "§b[?JAP.army|%.0]§!"
+ TR_JAP_navy_value: "§b[?JAP.navy|%.0]§!"
+ TR_JAP_air_value: "§b[?JAP.air|%.0]§!"
+ TR_JAP_huge_value: "§b[?JAP.huge|%.0]§!"
+ TR_JAP_free_value: "§b[?JAP.free|%.0]§!"
+ TR_JAP_control_value: "§b[?JAP.control|%.0]§!"
