--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -33,8 +33,6 @@ jap_Keynesian_Studies_in_Practice:"ケインズ学の実践"
 jap_Keynesian_Studies_in_Practice_desc:"農村部ではいまだに貧しい生活を強いられている臣民は数多く存在しており、彼らを救うためにも職を用意してやらなければならない。"
 jap_Controlling_inflation:"インフレを抑える"
 jap_Controlling_inflation_desc:"これ以上の積極財政はハイパーインフレに繋がる恐れがあり、一時的に緊縮財政へと振れることも許容しなければならない。"
-jap_Growth_based_on_Keynesian_studies:"ケインズ学に基づく成長を"
-jap_Growth_based_on_Keynesian_studies_desc:"国家を発展させるのは国家による大規模な公共事業への投資であり、国家資本主義である。我が国は積極財政を展開することでこれからの更なる経済成長へとつなげていく。"
 jap_decentralization_of_power:"地方分権"
 jap_decentralization_of_power_desc:"現在、経済発展とともにストロー現象と呼ばれる各地方都市への住民の流入が加速している。地方分権を進め地方自治体の能力を高めることでこれらの問題が解決されるだろう。
 jap_extensive_transportation_network:"交通網の充実"
@@ -266,3 +264,117 @@ jap_water_dum: "水力発電の推進"
 jap_fire: "火力発電の推進"
 
 TR_japan_20: "計画経済への移行が完了している"
+
+jap_RS_economy: "経済政策"
+jap_RS_economy_desc: ""
+jap_Takahashi_1: "道路整備"
+jap_Takahashi_1_desc: ""
+jap_Takahashi_2: "港湾整備"
+jap_Takahashi_2_desc: ""
+jap_Takahashi_3: "軍事費の増大"
+jap_Takahashi_3_desc: ""
+jap_RS_car: "自動車の奨励"
+jap_RS_car_desc: ""
+jap_RS_control_car: "自動車製造事業法"
+jap_Takahashi_4: "土木事業"
+jap_Takahashi_4_desc: ""
+jap_Takahashi_5: "土木事業"
+jap_Takahashi_5_desc: ""
+jap_Important_industry_control_law: "重要産業統制法"
+jap_Important_industry_control_law_desc: ""
+jap_deregulation: "規制緩和"
+jap_deregulation_desc: ""
+jap_Public_debt_gradual_reduction_policy: "公債削減方針"
+jap_Public_debt_gradual_reduction_policy_desc: ""
+jap_decrease_military: "軍事費の削減"
+jap_decrease_military_desc: ""
+jap_decrease_Subsidy: "補助金の削減"
+jap_decrease_Subsidy_desc: ""
+jap_fiscal_soundness: "財政健全化"
+jap_fiscal_soundness_desc: ""
+jap_Growth_based_on_Keynesian_studies: "国家資本主義"
+jap_Growth_based_on_Keynesian_studies_desc: ""
+jap_RS_socail_reform: "社会問題"
+jap_RS_socail_reform_desc: ""
+jap_RS_Supporting_Shitamachi_Factory: "下町工場を支援"
+jap_RS_Supporting_Shitamachi_Factory_desc: ""
+jap_RS_JIS: "JISを導入"
+jap_RS_JIS_desc: ""
+jap_RS_agrarian_reform_1: "農地改革"
+jap_RS_agrarian_reform_1_desc: ""
+jap_RS_zaibatsu: "財閥を規制"
+jap_RS_zaibatsu_desc: ""
+jap_RS_disparity: "格差社会の是正"
+jap_RS_disparity_desc: ""
+jap_RS_school: "奨学金制度"
+jap_RS_school_desc: ""
+jap_RS_dom: "河水統制事業"
+jap_RS_dom_desc: ""
+jap_RS_agrarian_reform_2: "農地改革"
+jap_RS_agrarian_reform_2_desc: ""
+jap_RS_low: "過度経済力集中排除法"
+jap_RS_low_desc: ""
+jap_RS_woman_evote: "女性参政権"
+jap_RS_woman_evote_desc: ""
+jap_RS_agrarian_reform_3: "農地改革"
+jap_RS_agrarian_reform_3_desc: ""
+jap_RS_zaibatsu: "財閥問題の最終的解決"
+jap_RS_zaibatsu_desc: ""
+jap_RS_planning_agency: "企画院を設立"
+jap_RS_planning_agency_desc: ""
+jap_RS_rador: "八木・宇田アンテナ"
+jap_RS_rador_desc: ""
+jap_RS_great_air_company: "大日本航空"
+jap_RS_great_air_company_desc: ""
+jap_RS_train: "建主改従方針"
+jap_RS_train_desc: ""
+jap_RS_Archipelago_remodeling_theory: "列島改造論"
+jap_RS_Archipelago_remodeling_theory_desc: ""
+jap_RS_miliraly: "軍拡路線"
+jap_RS_miliraly_desc: ""
+jap_RS_dockyard: "大神基地"
+jap_RS_dockyard_desc: ""
+jap_RS_Open_space_separation_method: "空地分離方式"
+jap_RS_Open_space_separation_method_desc: ""
+jap_RS_make_division: "師団新設"
+jap_RS_make_division_desc: ""
+jap_RS_plan_3: "第三次建造計画"
+jap_RS_plan_3_desc: "第三次建造計画は現在海軍内で検討中の新たなる艦船の建造計画のことであり、近いうちに結論が出るだろう。"
+jap_RS_fighting_battle: "格闘戦志向"
+jap_RS_fighting_battle_desc: ""
+jap_RS_tank: "独立混成旅団を検証"
+jap_RS_tank_desc: ""
+jap_RS_big_ship_big_gun_principle: "大艦巨砲主義"
+jap_RS_big_ship_big_gun_principle_desc: ""
+jap_RS_Aviation_main_soldier_theory: "航空主兵論"
+jap_RS_Aviation_main_soldier_theory_desc: ""
+jap_RS_Air_combat: "航空撃滅戦"
+jap_RS_Air_combat_desc: ""
+jap_RS_hand_to_hand_combat: "白兵主義"
+jap_RS_hand_to_hand_combat_desc: ""
+jap_RS_Revision_of_Naval_Warfare_Essentials_Order: "海戦要務令を改訂"
+jap_RS_Revision_of_Naval_Warfare_Essentials_Order_desc: ""
+jap_RS_Aircraft_manufacturing_factory: "航空機製造工場を新設"
+jap_RS_Aircraft_manufacturing_factory_desc: ""
+jap_RS_Revised_operational_requirements_order: "作戦要務令を改訂"
+jap_RS_Revised_operational_requirements_order_desc: ""
+jap_RS_Expand_the_ground_force: "陸戦隊を増強"
+jap_RS_Expand_the_ground_force_desc: ""
+jap_RS_Reconnaissance_aircraft: "新型偵察機"
+jap_RS_Reconnaissance_aircraft_desc: ""
+jap_RS_army_aircraft_carrier: "強襲揚陸艦"
+jap_RS_army_aircraft_carrier_desc: ""
+jap_RS_Excellent_ship_construction_subsidy_facility: "優秀船舶建造助成施設"
+jap_RS_Excellent_ship_construction_subsidy_facility_desc: ""
+jap_RS_bombing: "新型爆撃機"
+jap_RS_bombing_desc: ""
+jap_RS_supply_soldier: "輜重兵"
+jap_RS_supply_soldier_desc: ""
+jap_RS_Yokosuka_Naval_Base_First_Special_Ground_Force: "横須賀鎮守府第一特別陸戦隊"
+jap_RS_Yokosuka_Naval_Base_First_Special_Ground_Force_desc: ""
+jap_RS_Telecommunications_Solidarity: "逓信連帯"
+jap_RS_Telecommunications_Solidarity_desc: ""
+jap_RS_army_navy: "陸海軍統一の試み"
+jap_RS_army_navy_desc: ""
+jap_RS_20th_election: "第２０回衆議院選挙"
+jap_RS_20th_election_desc: ""
