リワーク第二弾

--- a/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_JAP_focus_l_japanese.yml
@@ -318,8 +318,8 @@ jap_RS_woman_evote: "女性参政権"
 jap_RS_woman_evote_desc: ""
 jap_RS_agrarian_reform_3: "農地改革"
 jap_RS_agrarian_reform_3_desc: ""
-jap_RS_zaibatsu: "財閥問題の最終的解決"
-jap_RS_zaibatsu_desc: ""
+jap_RS_zaibutsu_2: "財閥問題の最終的解決"
+jap_RS_zaibutsu_2_desc: ""
 jap_RS_planning_agency: "企画院を設立"
 jap_RS_planning_agency_desc: ""
 jap_RS_rador: "八木・宇田アンテナ"
@@ -376,5 +376,114 @@ jap_RS_Telecommunications_Solidarity: "逓信連帯"
 jap_RS_Telecommunications_Solidarity_desc: ""
 jap_RS_army_navy: "陸海軍統一の試み"
 jap_RS_army_navy_desc: ""
+
 jap_RS_20th_election: "第２０回衆議院選挙"
 jap_RS_20th_election_desc: ""
+jap_RM_economy: "経済政策"
+jap_RM_economy_desc: ""
+jap_austerity: "緊縮財政"
+jap_austerity_desc: ""
+jap_Gold_export_ban_lifted: "金輸出解禁"
+jap_Gold_export_ban_lifted_desc: ""
+jap_salary_reduction: "給与の引き下げ"
+jap_salary_reduction_desc: ""
+jap_Unemployment_relief_project_expenses: "失業救済事業費"
+jap_Unemployment_relief_project_expenses_desc: ""
+jap_Establishment_of_Social_Policy_Council: "社会政策審議会を設置"
+jap_Establishment_of_Social_Policy_Council_desc: ""
+jap_RM_car: "国産自動車の奨励"
+jap_RM_car_desc: ""
+jap_RM_control_car: "自動車製造事業法"
+jap_RM_control_car_desc: ""
+jap_RM_Important_industry_control_law: "重要産業統制法"
+jap_RM_Important_industry_control_law_desc: ""
+jap_RM_deregulation: "規制緩和"
+jap_RM_deregulation_desc: ""
+jap_Establishment_of_Japan_Economic_Federation: "日本経済聯盟会の設立"
+jap_Establishment_of_Japan_Economic_Federation_desc: ""
+jap_free_education: "古典的自由主義"
+jap_free_education_desc: ""
+jap_RM_socail_reform: "社会問題"
+jap_RM_socail_reform_desc: ""
+jap_RM_Supporting_Shitamachi_Factory: "下町工場を支援"
+jap_RM_Supporting_Shitamachi_Factory_desc: ""
+jap_RM_JIS: "JISを導入"
+jap_RM_JIS_desc: ""
+jap_RM_agrarian_reform_1: "農地改革"
+jap_RM_agrarian_reform_1_desc: ""
+jap_RM_zaibatsu: "財閥を規制"
+jap_RM_zaibatsu_desc: ""
+jap_RM_disparity: "格差社会の是正"
+jap_RM_disparity_desc: ""
+jap_RM_school: "奨学金制度"
+jap_RM_school_desc: ""
+jap_RM_dom: "河水統制事業"
+jap_RM_dom_desc: ""
+jap_RM_agrarian_reform_2: "農地改革"
+jap_RM_agrarian_reform_2_desc: ""
+jap_RM_low: "過度経済力集中排除法"
+jap_RM_low_desc: ""
+jap_RM_woman_evote: "女性参政権"
+jap_RM_woman_evote_desc: ""
+jap_RM_agrarian_reform_3: "農地改革"
+jap_RM_agrarian_reform_3_desc: ""
+jap_RM_zaibutsu_2: "財閥問題の最終的解決"
+jap_RM_zaibutsu_2_desc: ""
+jap_RM_planning_agency: "企画院を設立"
+jap_RM_planning_agency_desc: ""
+jap_RM_rador: "八木・宇田アンテナ"
+jap_RM_rador_desc: ""
+jap_RM_great_air_company: "大日本航空"
+jap_RM_great_air_company_desc: ""
+jap_RM_train: "改主建従方針"
+jap_RM_train_desc: ""
+jap_RM_Archipelago_remodeling_theory: "列島改造論"
+jap_RM_Archipelago_remodeling_theory_desc: ""
+jap_RM_miliraly: "軍拡路線"
+jap_RM_miliraly_desc: ""
+jap_RM_dockyard: "大神基地"
+jap_RM_dockyard_desc: ""
+jap_RM_Open_space_separation_method: "空地分離方式"
+jap_RM_Open_space_separation_method_desc: ""
+jap_RM_make_division: "師団新設"
+jap_RM_make_division_desc: ""
+jap_RM_plan_3: "第三次建造計画"
+jap_RM_plan_3_desc: "第三次建造計画は現在海軍内で検討中の新たなる艦船の建造計画のことであり、近いうちに結論が出るだろう。"
+jap_RM_fighting_battle: "格闘戦志向"
+jap_RM_fighting_battle_desc: ""
+jap_RM_tank: "独立混成旅団を検証"
+jap_RM_tank_desc: ""
+jap_RM_big_ship_big_gun_principle: "大艦巨砲主義"
+jap_RM_big_ship_big_gun_principle_desc: ""
+jap_RM_Aviation_main_soldier_theory: "航空主兵論"
+jap_RM_Aviation_main_soldier_theory_desc: ""
+jap_RM_Air_combat: "航空撃滅戦"
+jap_RM_Air_combat_desc: ""
+jap_RM_hand_to_hand_combat: "白兵主義"
+jap_RM_hand_to_hand_combat_desc: ""
+jap_RM_Revision_of_Naval_Warfare_Essentials_Order: "海戦要務令を改訂"
+jap_RM_Revision_of_Naval_Warfare_Essentials_Order_desc: ""
+jap_RM_Aircraft_manufacturing_factory: "航空機製造工場を新設"
+jap_RM_Aircraft_manufacturing_factory_desc: ""
+jap_RM_Revised_operational_requirements_order: "作戦要務令を改訂"
+jap_RM_Revised_operational_requirements_order_desc: ""
+jap_RM_Expand_the_ground_force: "陸戦隊を増強"
+jap_RM_Expand_the_ground_force_desc: ""
+jap_RM_Reconnaissance_aircraft: "新型偵察機"
+jap_RM_Reconnaissance_aircraft_desc: ""
+jap_RM_army_aircraft_carrier: "強襲揚陸艦"
+jap_RM_army_aircraft_carrier_desc: ""
+jap_RM_Excellent_ship_construction_subsidy_facility: "優秀船舶建造助成施設"
+jap_RM_Excellent_ship_construction_subsidy_facility_desc: ""
+jap_RM_bombing: "新型爆撃機"
+jap_RM_bombing_desc: ""
+jap_RM_supply_soldier: "輜重兵"
+jap_RM_supply_soldier_desc: ""
+jap_RM_Yokosuka_Naval_Base_First_Special_Ground_Force: "横須賀鎮守府第一特別陸戦隊"
+jap_RM_Yokosuka_Naval_Base_First_Special_Ground_Force_desc: ""
+jap_RM_Telecommunications_Solidarity: "逓信連帯"
+jap_RM_Telecommunications_Solidarity_desc: ""
+jap_RM_army_navy: "陸海軍統一の試み"
+jap_RM_army_navy_desc: ""
+jap_RM_20th_election: "第２０回衆議院選挙"
+jap_RM_20th_election_desc: ""
