ステート名修正

--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -783,7 +783,7 @@
  STATE_781:0 "ニジェール"
  STATE_782:0 "トンブクトゥ"
  STATE_783:0 "シディ・イフニー"
- STATE_784:0 "ヴィルノ"
+ STATE_784:0 "ヴィリナ"
  STATE_785:0 "ピカルディ"
  STATE_786:0 "モーリタニア砂漠"
  STATE_787:0 "カシミール北部"
@@ -1092,7 +1092,7 @@
  STATE_1090:0 "シュターケンベルク"
  STATE_1091:0 "オイペン・マルメディ"
  STATE_1092:0 "ベルリン"
- STATE_1093:0 "シュタイアーマルク"
+ STATE_1093:0 "シュタイアーマルク"vi
  STATE_1094:0 "ムラメンテ"
  STATE_1095:0 "ウンターフランケン"
  STATE_1096:0 "オーバーフランケン"
@@ -1102,9 +1102,12 @@
  STATE_1100:0 "ケルンテン"
  STATE_1101:0 "ブルゲンラント"
  STATE_1102:0 "ツナイム"
- STATE_1103:0 "スロバキア南東部"
- STATE_1104:0 "ハンガリー北部"
- STATE_1105:0 "西トランスダヌビア"
- STATE_1106:0 "トランスダヌビア"
- STATE_1107:0 "バックス・キスクン"
- STATE_1108:0 "南アルフェルド"
+ STATE_1103:0 "シロンスク"
+ STATE_1104:0 "グロドノ"
+ STATE_1105:0 "ヴィルノ"
+ STATE_1106:0 "スロバキア南東部"
+ STATE_1107:0 "ハンガリー北部"
+ STATE_1108:0 "西トランスダヌビア"
+ STATE_1109:0 "トランスダヌビア"
+ STATE_1110:0 "バックス・キスクン"
+ STATE_1111:0 "南アルフェルド"
