--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6462,3 +6462,7 @@
  JCH: "中国総督府"
  JCH_DEF: "中国総督府"
  JCH_ADJ: "中国総督府"
+
+ RUP: "北アメリカ・太平洋総督府"
+ RUP_DEF: "北アメリカ・太平洋総督府"
+ RUP_ADJ: "北アメリカ・太平洋総督府"
