アラスカ関連の調整

--- a/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/TR_RUS_tooltips_l_japanese.yml
@@ -59,3 +59,5 @@
  RUS_TW_unprison:"§G不当に拘束されていた政治犯たちを側近に登用する§!"
 
  RUS_idea_volks_army.tt:"§R民族師団によって軍は政治的な制約を受ける！§!\n危機の時には敵対的§R民族闘争§!が起こる可能性がある\n\n国家方針によって対立を解消しなければ、§Yカフカース§!、§Yトルキスタン§!で§R反乱§!が起こる！"
+
+ RUS_rup_budget.tt:"§Rロシア帝国が危機に陥れば、予算を大きく減額される可能性がある！"
