東アフリカ

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6466,3 +6466,7 @@
  RUP: "北アメリカ・太平洋総督府"
  RUP_DEF: "北アメリカ・太平洋総督府"
  RUP_ADJ: "北アメリカ・太平洋総督府"
+
+ EAS: "ドイツ・東アフリカ軍団"
+ EAS_DEF: "ドイツ・東アフリカ軍団"
+ EAS_ADJ: "ドイツ・東アフリカ軍団"
