--- a/localisation/japanese/state_names_l_japanese.yml
+++ b/localisation/japanese/state_names_l_japanese.yml
@@ -544,9 +544,9 @@
  STATE_543:0 "マダガスカル"
  STATE_544:0 "ロレンソ・マルケス"
  STATE_545:0 "ローデシア"
- STATE_546:0 "タンガニーカ"
+ STATE_546:0 "ダルエスサラーム"
  STATE_547:0 "ナイロビ"
- STATE_548:0 "ウガンダ"
+ STATE_548:0 "カンパラ"
  STATE_549:0 "クルドファン"
  STATE_550:0 "エリトリア"
  STATE_551:0 "ハルツーム"
@@ -716,7 +716,7 @@
  STATE_715:0 "遼寧"
  STATE_716:0 "遼東"
  STATE_717:0 "松江"
- STATE_718:0 "スタンリーヴィル"
+ STATE_718:0 "キサンガニエン"
  STATE_719:0 "ナタール"
  STATE_720:0 "サウスジョージア"
  STATE_721:0 "ポルトガル領ティモール"
@@ -767,8 +767,8 @@
  STATE_765:0 "カタール"
  STATE_766:0 "ベッサラビア南部"
  STATE_767:0 "北ダルフール"
- STATE_768:0 "ルワンダ"
- STATE_769:0 "ブルンジ"
+ STATE_768:0 "ルアンダ"
+ STATE_769:0 "ブルンディ"
  STATE_770:0 "マラウイ"
  STATE_771:0 "ザンビア"
  STATE_772:0 "中央コンゴ"
@@ -889,7 +889,7 @@
  STATE_887:0 "南ダルフール"
  STATE_888:0 "ルサンボ"
  STATE_889:0 "エリザベートヴィル"
- STATE_890:0 "コステルマンスビル"
+ STATE_890:0 "ブカブスベルク"
  STATE_891:0 "ザンベジ"
  STATE_892:0 "南西アンゴラ"
  STATE_893:0 "カラス"
@@ -1111,3 +1111,6 @@
  STATE_1109:0 "トランスダヌビア"
  STATE_1110:0 "バックス・キスクン"
  STATE_1111:0 "南アルフェルド"
+ STATE_1112:0 "タンザニア回廊"
+ STATE_1113:0 "ヴェスト・タンガニーカ"
+ STATE_1114:0 "ムバレ"
