--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -8,6 +8,9 @@
  RUS_Joseph_Stalin: "ヨシフ・ジュガシヴィリ"
  RUS_georgy_zhukov: "ゲオルギー・ジューコフ"
 
+
+ EAS_von_Lettow_Vorberk: "パウル・フォン・レットウ・フォルベック"
+
  SRI_Gabriele_DAnnunzio: "ガブリエーレ・ダンヌンツィオ"
  SRI_consiglio_socialista: "臨時社会主義評議会"
  SRI_blank_leader: "指導者不在"
