仮　途中まで

--- a/localisation/TR_events/japanese/TR_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_events_l_japanese.yml
@@ -1,2 +1,5 @@
 ﻿l_japanese:
+ TEST_TITLE: "ここにこの孤児が表示されるってことは、作成者が怠惰だってことですね。"
+ TEST_DESC: "『説明っていうのは、説明だからこそ説明なんですよね。』 ―小泉進次郎？"
+ TEST_BUTTON: "押すなよ、絶対に押すなよ。"
 
