--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -228,6 +228,9 @@
  GRA_COL_fascism: "大コロンビア帝国"
  GRA_COL_fascism_DEF: "大コロンビア帝国"
  
+ RUS_reactionary_rebels_novgorod: "ノヴゴロド叛乱軍"
+ RUS_reactionary_rebels_novgorod_DEF: "ノヴゴロド叛乱軍"
+ RUS_reactionary_rebels_novgorod_ADJ: "叛乱軍"
  RUS_reactionary_rebels: "ロシア救国軍"
  RUS_reactionary_rebels_DEF: "ロシア救国軍"
  RUS_reactionary_rebels_ADJ: "救国軍"
