--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -184,18 +184,37 @@
  TR_Russia_diplo.14.a: "テスト:履行します"
  TR_Russia_diplo.14.b: "テスト:記憶にございません"
 
- TR_Russia_TW.1.t:"新皇帝の即位"
- TR_Russia_TW.1.d:"空位の混乱の中新たな全ロシアの君主となったのはキリル・ウラジミロヴィチだ。その法的地位は権威あるロシアの伝統によって保障されているが、彼の改革的思想は国内の複数の利権者たちに差し迫った危険を感じさせている。\n守旧派たちは自らの軍に対する命令に反抗的になり、空位の混乱に乗じて練っていた複数の計画をそのまま続行するつもりらしい。"
- TR_Russia_TW.1.a:"アカの次は反動派か"
+ TR_Russia_TW.1.t: "新皇帝の即位"
+ TR_Russia_TW.1.d: "空位の混乱の中新たな全ロシアの君主となったのはキリル・ウラジミロヴィチだ。その法的地位は権威あるロシアの伝統によって保障されているが、彼の改革的思想は国内の複数の利権者たちに差し迫った危険を感じさせている。\n守旧派たちは自らの軍に対する命令に反抗的になり、空位の混乱に乗じて練っていた複数の計画をそのまま続行するつもりらしい。"
+ TR_Russia_TW.1.a: "アカの次は反動派か"
 
- TR_Russia_TW.2.t:"ノヴゴロド動乱"
- TR_Russia_TW.2.d:"陸軍から驚くべき報告が舞い込んできた。守旧派の中でも過激なアントン・デニーキン元帥が駐在中のノヴゴロドで兵士を煽動し、ペトログラードの国家権力を拒否するための行動を起こそうとしている。小規模な警察隊が鎮圧に向かうとのことであるが、武装の質はデニーキンの軍が勝っていることは想像に難くない。"
- TR_Russia_TW.2.a:"元帥の我儘に真剣になる必要はない"
- TR_Russia_TW.2.b:"小規模な警察部隊を送れ" 
- TR_Russia_TW.2.c:"親衛隊を呼べ"
- oppose_government:"政府への反抗"
- oppose_government_desc:"この指揮官は政府へ強い反感を抱いており、軍の命令をいくらか無視した行動を行うだろう。"
+ TR_Russia_TW.2.t: "ノヴゴロド動乱"
+ TR_Russia_TW.2.d: "陸軍から驚くべき報告が舞い込んできた。守旧派の中でも過激なアントン・デニーキン元帥が駐在中のノヴゴロドで兵士を煽動し、ペトログラードの国家権力を拒否するための行動を起こそうとしている。小規模な警察隊が鎮圧に向かうとのことであるが、武装の質はデニーキンの軍が勝っていることは想像に難くない。"
+ TR_Russia_TW.2.a: "元帥の我儘に真剣になる必要はない"
+ TR_Russia_TW.2.b: "小規模な警察部隊を送れ" 
+ TR_Russia_TW.2.c: "親衛隊を呼べ"
+ oppose_government: "政府への反抗"
+ oppose_government_desc: "この指揮官は政府へ強い反感を抱いており、軍の命令をいくらか無視した行動を行うだろう。"
+ #選択肢2
+ TR_Russia_TW.3.t: "警官が発砲"
+ TR_Russia_TW.3.d: "$TEST_DESC$"
+ TR_Russia_TW.3.a: "$TEST_BUTTON$"
+ TR_Russia_TW.4.t: "アントン以外の過激派将校を捕縛"
+ TR_Russia_TW.4.d: "$TEST_DESC$"
+ TR_Russia_TW.4.a: "$TEST_BUTTON$"
+ #選択肢3
+ TR_Russia_TW.5.t: "親衛隊が戦闘"
+ TR_Russia_TW.5.d: "$TEST_DESC$"
+ TR_Russia_TW.5.a: "$TEST_BUTTON$"
+ TR_Russia_TW.6.t: "アントン以外の過激派を射殺"
+ TR_Russia_TW.6.d: "$TEST_DESC$"
+ TR_Russia_TW.6.a: "$TEST_BUTTON$"
 
- TR_Russia_TW.201.t:"ノヴゴロド動乱が周辺へ拡大"
- TR_Russia_TW.201.d:"ノヴゴロドで発生した動乱につられて、その周囲におけるデニーキンの信奉者たちは過激な行動を始めている。現在の活動水準では明確な行動を行うには不十分だが、必ずこれを鎮圧する必要がある。"
- TR_Russia_TW.201.a:"戯れじゃ済まなくなったな"
+ TR_Russia_TW.7.t: "[ROOT.GetName]で守旧派が蜂起" #州ごとにイベントを作るのではなく、共通。
+ TR_Russia_TW.7.d: "$TEST_DESC$"
+ TR_Russia_TW.7.a: "$TEST_BUTTON$"
+ TR_Russia_TW.18.t: "[ROOT.GetName]で守旧派が反抗"
+
+ TR_Russia_TW.201.t: "ノヴゴロド動乱が周辺へ拡大"
+ TR_Russia_TW.201.d: "ノヴゴロドで発生した動乱につられて、その周囲におけるデニーキンの信奉者たちは過激な行動を始めている。現在の活動水準では明確な行動を行うには不十分だが、必ずこれを鎮圧する必要がある。"
+ TR_Russia_TW.201.a: "戯れじゃ済まなくなったな"
