--- a/localisation/TR_events/japanese/TR_GER_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_GER_events_l_japanese.yml
@@ -3,13 +3,10 @@
  TR_germany.1.d: ""
  TR_germany.1.a: "よろしい"
  TR_germany.2.t: "選挙結果"
- TR_germany.2.d: "今日は開票日だ。誰もが選挙結果を気にかけ、それぞれの支持政党が勝利することを願っている。果たしてその結果は..."
+ TR_germany.2.d: "ついに開票日が訪れた。誰もが選挙結果を気にかけ、それぞれの支持政党がより多くの議席を獲得することを願っている。果たしてその結果は..."
  TR_germany.2.a: "KPDは過半数を守り抜いた"
  TR_germany.3.t: "新議長？"
- TR_germany.3.d: "総選挙後ベルリンで開催されたレーテ大会は騒然としていた。現職のカール・リープクネヒト議長が長期政権を理由に辞職したのである。今やKPDは派閥によって二分化されており、新議長の座を巡って二人の候補者を持つ分裂状態となった。\nハインリヒ・ブランドラーを首班とする党の主流派たるブランドラー派は、政権の安定化ーファシズムとの対決のために社会民主党との協力が不可欠であると主張している。\n一方で、党内の急進左派で知られるエルンスト・テールマンは社会ファシズム論を唱え、ブランドラー派の考えを「革命への裏切り」であると批判している。彼らの派閥闘争はこれまでも水面下で続いてきたが、遂に彼らが権力を握るチャンスが訪れた。\n\nこれからのドイツを率いる事となる新議長に選ばれたのは..."
+ TR_germany.3.d: "評議会選挙後、ベルリンで開催された共産党大会は騒然としていた。共産党内部の派閥闘争の影響により、新議長の座を巡って二人の候補者を持つ分裂状態となったのである。\nハインリヒ・ブランドラーを首班とする党の主流派たるブランドラー派は、政権の安定化ーファシズムとの対決のために社会民主党との協力が不可欠であると主張している。\n一方で、党内の急進左派で知られるエルンスト・テールマンは社会ファシズム論を唱え、ブランドラー派の考えを「革命への裏切り」であると批判している。彼らの派閥闘争はこれまでも水面下で続いてきたが、遂に彼らが権力を握るチャンスが訪れた。\n\nこれからのドイツを率いる事となる新議長に選ばれたのは..."
  TR_germany.3.a: "ハインリヒ・ブランドラー"
  TR_germany.3.b: "エルンスト・テールマン"
- TR_germany.4.t: "新政府の発足"
- TR_germany.4.d: "何人かのSPD代表は我々の提案に反対して席を立ったが、無事連立政権について合意に達することが出来た。"
- TR_germany.4.a: "素晴らしい"
 
