アメリカスパイべ

--- a/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
@@ -14,3 +14,9 @@
  SE_German_Civil_War_Title: "ドイツ内戦"
  SE_German_Civil_War_Desc: "どの国の労働者階級も、\n闘争の過程でのみ闘うことを学ぶ。\n\n―ローザ・ルクセンブルク"
  SE_German_Civil_War_Button: "遂に始まった"
+ SE_Tsar_War_Title: "デニーキンの乱"
+ SE_Tsar_War_Desc: "\nただロシアが、諸君の幸福のために安穏であり、\n名誉を保ちうれば、それでいいのだ\n\n―ピョートル大帝"
+ SE_Tsar_War_Button: "神よ、ツァーリを護り給へ！"
+ SE_Unified_America_Title: "アメリカ統一"
+ SE_Unified_America_Desc: "\n人民の人民による人民のための政治\n\n―エイブラハム・リンカーン"
+ SE_Unified_America_Button: "自由は守られた"
