--- a/localisation/TR_musics/TR_super_event_music_l_english.yml
+++ b/localisation/TR_musics/TR_super_event_music_l_english.yml
@@ -4,3 +4,4 @@ l_english:
  risorgimento_italiano:0 "risorgimento_italiano"
  when_johnny_comes_marching_home:0 "when_johnny_comes_marching_home"
  einheitsfrontlied:0 "einheitsfrontlied"
+ The_Star_Spangled_Banner: "星条旗"
