--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -6378,6 +6378,9 @@
  AMG: "アメリカ軍事政府"
  AMG_ADJ: "アメリカ軍事政府"
  AMG_DEF: "アメリカ"
+ FAM: "自由アメリカ"
+ FAM_DEF: "北アメリカ自由領域"
+ FAM_ADJ: "アメリカ"
  TXS: "テキサス共和国"
  TXS_ADJ: "テキサス共和国"
  TXS_DEF: "テキサス"
